# cppCourse

./: CMakeLists.txt  README.md  cppHomework.cpp  cppHomework1.C  cppHomework1.cpp  day1Operations.cpp  day1Operations.h  day2Operations.cpp  pp6Math.cpp
FileReader-1.0.0/: FileReader.cpp  FileReader.hpp
Lib/: pp6Math.h  pp6io.cpp  pp6io.h
Lib/include/: partClasses.h  physClasses.h  pp6Math.h  pp6io.h
Lib/src/: partClasses.cpp  physClasses.cpp  pp6Math.cpp  pp6io.cpp
Modules/include/: day1Operations.h  day2Operations.h  day3Operations.h  day4Operations.h
Modules/src/: day1Operations.cpp  day2Operations.cpp  day3Operations.cpp  day4Operations.cpp
cppCourse/: file.cpp
